Closed Bug 1893106 Opened 7 months ago Closed 7 months ago

cubeb-coreaudio-rs crashing again on macOS 12

Categories

(Core :: Audio/Video: cubeb, defect, P1)

defect

Tracking

()

VERIFIED FIXED
127 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox125 --- unaffected
firefox126 + verified
firefox127 + verified

People

(Reporter: pehrsons, Assigned: pehrsons)

References

(Depends on 1 open bug, Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(4 files)

See bug 1866595 comment 24 which can happen with a built-in mic because of the vpio force-list introduced in bug 1880244.

Set release status flags based on info from the regressing bug 1880244

cubeb-coreaudio-rs is now responsible for this.

Crash Signature: [@ objc_msgSend | HALC_ShellDevice::_GetPropertyData ]
Keywords: crash

The bug is marked as tracked for firefox126 (beta) and tracked for firefox127 (nightly). However, the bug still has low severity.

:jimm, could you please increase the severity for this tracked bug? If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(jmathies)
Attachment #9398296 - Attachment description: Bug 1893106 - Update cubeb-coreaudio-rs to d9d82c2aea. r?padenot! → Bug 1893106 - Update cubeb-coreaudio-rs to cc58f92f28. r?padenot!
Severity: S3 → S2
Flags: needinfo?(jmathies)
Pushed by pehrsons@gmail.com: https://hg.mozilla.org/integration/autoland/rev/6c1d84f3ebd0 Update cubeb-coreaudio-rs to cc58f92f28. r=padenot https://hg.mozilla.org/integration/autoland/rev/7fc57c6a8e77 In Gecko don't disable VOICE on macOS 12. r=padenot
Status: ASSIGNED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
Attachment #9398782 - Flags: approval-mozilla-beta?

cubeb-coreaudio-rs is now responsible for this.

Original Revision: https://phabricator.services.mozilla.com/D208445

Attachment #9398783 - Flags: approval-mozilla-beta?

beta Uplift Approval Request

  • User impact if declined: Firefox parent process may crash when macOS 12 users capture their builtin microphone.
  • Code covered by automated testing: no
  • Fix verified in Nightly: no
  • Needs manual QE test: yes
  • Steps to reproduce for manual QE testing: See bug 1866595 comment 9
  • Risk associated with taking this patch: Low risk
  • Explanation of risk level: We're moving some conditionals to change how one of two well-tested paths get taken on macOS 12.
  • String changes made/needed: None
  • Is Android affected?: no
Flags: qe-verify+

beta Uplift Approval Request

  • User impact if declined: Firefox parent process may crash when macOS 12 users capture their builtin microphone.
  • Code covered by automated testing: no
  • Fix verified in Nightly: no
  • Needs manual QE test: yes
  • Steps to reproduce for manual QE testing: See bug 1866595 comment 9, making sure you use the builtin microphone when testing.
  • Risk associated with taking this patch: Low risk
  • Explanation of risk level: We're moving some conditionals to change how one of two well-tested paths get taken on macOS 12.
  • String changes made/needed: None
  • Is Android affected?: no
QA Whiteboard: [qa-triaged]
Attachment #9398783 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9398782 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Verified the fix using latest Nightly 127.0a1 om macOS 12. Couldn't reproduce the issue anymore.

However on Firefox 126.0b6 the issue is still reproducing. I guess I have to wait for Firefox 126.0b7 to verify the fix on beta.

(In reply to Oana Botisan, Desktop QA from comment #12)

I guess I have to wait for Firefox 126.0b7 to verify the fix on beta.

Correct, the fix was uplifted to beta after 126.0b6 was built. It's available in 126.0b7.

Thank you for your response.
Verified the fix on Firefox 126.0b7 using macOS 12. I can't seem to be able to reproduce the issue anymore.

Status: RESOLVED → VERIFIED
Flags: qe-verify+

Steven, there are unfortunately issues outside our control here, we're in contact with Apple, that has acknowledged the issue. We've disabled this new code path on most macOS version (on which the problem is happening more frequently), but left it enabled in the most recent version, where the problems exist but is rare.

This is definitely an Apple bug, and there's probably nothing Mozilla can do about it ... besides reporting it to Apple. I'm glad that's been done.

I just wanted to make people aware that these crashes haven't been fixed, or even reduced in frequency.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: