Bug 1893106 - In Gecko don't disable VOICE on macOS 12. r=padenot

cubeb-coreaudio-rs is now responsible for this.

Differential Revision: https://phabricator.services.mozilla.com/D208445